cargo-features = ["edition2024"]

[package]
name = "tee-worker-post-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-signer = "0.15.9"
alloy-signer-local = "0.15.9"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha256 = "1.6.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
walkdir = "2.5.0"
zip = "2.1.3"
tokio = { version = "1.45.0", features = ["full"] } # Moved from dev-dependencies

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.20.0"
wiremock = "0.6.3"
